[workspace]

members = [
  "gk_01_stack_heap",
  "gk_02_concepts",
  "gk_03_grammar/scrape_url",
  "gk_03_grammar/scrape_url_args",
  "gk_03_grammar/scrape_url_with_error_handling",
  "gk_04_httpie",
  "gk_05_thumbor",
  "gk_06_queryer/queryer",
  "gk_06_queryer/queryer-js",
  "gk_06_queryer/queryer-py",
  "gk_07_ownership",
  "gk_08_borrow",
  "gk_09_multi_owner",
  "gk_10_lifetime",
  "gk_11_memory",
  "gk_12_type_system",
  "gk_13_traits",
  "gk_14_sys_traits",
  "gk_15_smart_pointers",
  "gk_16_data_structure",
  "gk_17_hash_table",
  "gk_19_closure",
  "gk_21_kv",
  "mid_term_rgrep",
  "gk_23_advanced_generics",
  "gk_24_advanced_trait_objects",
  "gk_26_kv",
  "gk_29_network",
  "gk_30_unsafe",
  "gk_31_ffi/ffi",
  "gk_31_ffi/ffi_math",
  "gk_32_xunmi_py",
  "gk_33_concurrency",
  "gk_35_con_utils",
  "gk_36_kv",
  "gk_37_kv",
  "gk_38_async",
  "gk_39_async_internals",
  "gk_40_async_stream",
  "gk_41_kv",
  "gk_42_kv",
  "gk_43_docdoc",
  "gk_44_data_processing",
  "gk_45_arch",
  "gk_46_kv",
  "gk_ending",
  "gk_47_48_macros",
]
