[package]
name = "concepts"
version = "0.1.0"
edition = "2021"
description = "数据(值和类型、指针和引用)、代码（函数、方法、闭包、接口和虚表）、运行方式(并发并行、同步异步和 Promise /async / await ),以及编程范式(泛型编程)"

[[bin]]
name = "type"
path = "src/type.rs"

[[bin]]
name = "shape"
path = "src/shape.rs"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
