[package]
name = "grammar"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "event"
path = "src/event.rs"

[[bin]]
name = "fib"
path = "src/fib.rs"

[[bin]]
name = "apply"
path = "src/apply.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
firestorm = { version="0.5", features=["enable_system_time"] }